@startuml

title __BEST_FOOD.APP's Class Diagram__\n

  namespace es.uniovi.eii.bestfood {
    class es.uniovi.eii.bestfood.BarcodeScanner {
    }
  }
  

  namespace es.uniovi.eii.bestfood {
    class es.uniovi.eii.bestfood.BuildConfig {
    }
  }
  

  namespace es.uniovi.eii.bestfood {
    class es.uniovi.eii.bestfood.EditComidaActivity {
    }
  }
  

  namespace es.uniovi.eii.bestfood {
    class es.uniovi.eii.bestfood.ListaComidasAdapter {
    }
  }
  

  namespace es.uniovi.eii.bestfood {
    class es.uniovi.eii.bestfood.Login {
    }
  }
  

  namespace es.uniovi.eii.bestfood {
    class es.uniovi.eii.bestfood.MainActivity {
    }
  }
  

  namespace es.uniovi.eii.bestfood {
    class es.uniovi.eii.bestfood.PropiedadesActivity {
    }
  }
  

  namespace es.uniovi.eii.bestfood {
    namespace modelo {
      class es.uniovi.eii.bestfood.modelo.Comida {
      }
    }
  }
  

  es.uniovi.eii.bestfood.BarcodeScanner -up-|> androidx.appcompat.app.AppCompatActivity
  es.uniovi.eii.bestfood.BarcodeScanner o-- es.uniovi.eii.bestfood.modelo.Comida : comida
  es.uniovi.eii.bestfood.EditComidaActivity -up-|> androidx.appcompat.app.AppCompatActivity
  es.uniovi.eii.bestfood.EditComidaActivity o-- es.uniovi.eii.bestfood.modelo.Comida : comida
  es.uniovi.eii.bestfood.ListaComidasAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  es.uniovi.eii.bestfood.ListaComidasAdapter o-- es.uniovi.eii.bestfood.ListaComidasAdapter.OnItemClickListener : listener
  es.uniovi.eii.bestfood.Login -up-|> androidx.appcompat.app.AppCompatActivity
  es.uniovi.eii.bestfood.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  es.uniovi.eii.bestfood.MainActivity o-- es.uniovi.eii.bestfood.modelo.Comida : comida
  es.uniovi.eii.bestfood.PropiedadesActivity -up-|> androidx.appcompat.app.AppCompatActivity
  es.uniovi.eii.bestfood.PropiedadesActivity o-- es.uniovi.eii.bestfood.modelo.Comida : comida
  es.uniovi.eii.bestfood.modelo.Comida .up.|> android.os.Parcelable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
